<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/ScrollView01"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:padding="16dp"-->
    <!--android:scrollbars="vertical">-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/headerLbl"
            android:textColor="#ffe8e8e8" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_margin="5dp"
            android:layout_weight="1.62" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/nameLblContent"
                android:textColor="#ffe8e8e8" />

            <EditText
                android:id="@+id/locationNameTextBox"
                android:layout_gravity="right"
                android:minWidth="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffe8e8e8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/notificationLbl"
                android:textColor="#ffe8e8e8" />

            <Spinner
                android:id="@+id/radiusMeter"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:background="#ffa9a9a9"
            android:onClick="addGeofencesButtonHandler"
            android:text="@string/btnSave" />

    </LinearLayout>
<!--</ScrollView>-->

