<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/ScrollView02"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:padding="16dp"-->
    <!--android:scrollbars="vertical">-->

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:orientation="vertical"
        android:weightSum="1">

        <!--<TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/welcomeLbl"
            android:textColor="#fffffbf9"
            android:textColorHighlight="#ffbdbdbd"
            android:textSize="30sp"/>-->

        <ImageView
            android:id="@+id/welcomeImg"
            android:layout_width="270dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_welcome" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_margin="5dp"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="5dp"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/addLocationLabel"-->
                <!--android:textColor="#fffffbf9"-->
                <!--android:textSize="20dp" />-->

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/btnAdd" />
    <!--android:layout_marginLeft="30dp"-->
        <!--</LinearLayout>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/existingPlacesLbl"
            android:textColor="#fffffbf9"
            android:textSize="20dp" />
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:scrollbars="vertical"-->
        <!--android:padding="5dp">-->
      <!--<LinearLayout-->
          <!--android:layout_width="match_parent"-->
          <!--android:layout_height="225dp">-->

        <ListView
            android:id="@+id/placesList"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:theme="@style/ItemColor"></ListView>
        <!--</LinearLayout>-->
    <!--</ScrollView>-->


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:text="@string/btnDelete" />
        <!--</ScrollView>-->


    </LinearLayout>
<!--</ScrollView>-->